Replace logo and fix spacings

--- a/code/src/layouts/header/components/header-categories/HeaderCategories.scss
+++ b/code/src/layouts/header/components/header-categories/HeaderCategories.scss
@@ -1,10 +1,11 @@
 @import "@design-system";
 
 .menu {
-  display: flex;
-  padding-block: spacing(2);
+  padding: spacing(2) spacing(4);
   background-color: var(--spa-menu-background-color, $light);
-  &__item {
-    padding: spacing(2) spacing(5);
+
+  &__container {
+    display: flex;
+    column-gap: spacing(8);
   }
 }
