--- a/code/src/layouts/header/components/header-toolbar/HeaderToolbar.scss
+++ b/code/src/layouts/header/components/header-toolbar/HeaderToolbar.scss
@@ -1,7 +1,7 @@
 @import "@design-system";
 
 .header__wrapper {
-  padding-block: spacing(2);
+  padding: spacing(3) spacing(4);
   background-color: var(--spa-wrapper-background-color, $white);
 }
 
@@ -15,7 +15,7 @@
     align-items: center;
 
     &-image {
-      height: 70px;
+      height: 35px;
     }
   }
 
